inspection fixes